fix alignment

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,31 +2,9 @@
 @import '~bootstrap/scss/_variables.scss';
 @import '~bootstrap/scss/mixins/_breakpoints.scss';
 
-html,
-body {
-  height: 100vh;
-}
-
-#__nuxt {
-  height: 100%;
-}
-
-#__layout {
-  height: 100%;
-  div:first-of-type {
-    height: 100%;
-  }
-}
-
 .layout__container {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.main-body {
-  flex-grow: 2;
-  flex-basis: 100px;
-  width: 100%;
-  text-align: center;
+  height: 100vh;
 }
